# C_Project_Template

./: .gitignore  Makefile  README.md  configuration.h  main.c
src/: CMakeLists.txt  configuration.h  main.c  networking.c  networking.h
test/: test-runner.cpp
